[package]
name = "rust_nes"
version = "0.2.2"
authors = ["xxrl <837951112@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "src/build.rs"

[dependencies]
clap = { version = "3.0.0-rc.7", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1.0.59"
ini = "1.3.0"
image = { version = "0.23.12", features = ["rgb"] }
num_enum = "0.5.7"

# glfw and audio
portaudio = { version = "0.7.0", optional = true }
glfw = { version = "0.42.0", optional = true }
gl = { version = "0.14.0", optional = true }

# sdl2 and android 
sdl2 = { version = "0.35.2", optional = true }
android_logger = { version = "0.11.0", optional = true }
jni = { version = "0.19.0", default-features = false, optional = true }

# for web
js-sys = { version = "0.3.51", optional = true }
wasm-bindgen = { version = "0.2.74", optional = true }
wasm-rgame = { version = "0.0.1", optional = true }
wasm-logger = { version = "0.2.0", optional = true }

[build-dependencies]
dunce = "1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlParagraphElement',
  'KeyboardEvent',
  'WebGl2RenderingContext',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture',
  'Window',
  'FocusEvent',
  'File',
  "FileReader",
]


[profile.release]
lto = true

[lib]
name = "rust_nes"
crate-type = ["cdylib", "lib"]


[[bin]]
name = "emulator"
path = "src/main.rs"

[features]
default = ["use_sdl2"]
use_gl = ["gl", "glfw"]
audio = ["portaudio"]
wasm = ["js-sys", "wasm-bindgen", "wasm-rgame", "wasm-logger"]
use_sdl2 = ["sdl2", "android_logger", "jni"]
