[package]
name = "rust-emu-gba"
version = "0.1.0"
authors = ["xxrl <837951112@qq.com>"]
edition = "2018"

[dependencies]
rust-emu-common = { version = "*", path = "../rust-emu-common"}
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1.0.59"
log = { version = "0.4", features = ["std"] }


[[bin]]
name = "emulator-gba"
path = "src/main.rs"
