[package]
name = "rust-emu-gba"
version = "0.1.0"
authors = ["xxrl <837951112@qq.com>"]
edition = "2018"

[dependencies]
rust-emu-common = { version = "*", path = "../rust-emu-common"}
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1.0.59"
log = { version = "0.4", features = ["std"] }

image = { version = "0.23.12", features = ["rgb"] }
clap = { version = "3.0.0-rc.7", features = ["derive"] }


[[bin]]
name = "emulator-gba"
path = "src/main.rs"

[features]
default = ["use_gl"]
use_gl = ["rust-emu-common/use_gl"]
